Wed Jul  9 16:09:30 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:
        * configure.ac:

          Remove feature test and autoheader template for
          ACE_LACKS_WILDCARD_BIND.

        * ace/Sock_Connect.cpp:

          Remove use of ACE_LACKS_WILDCARD_BIND feature test macro.

        * ace/README:

          Remove ACE_LACKS_WILDCARD_BIND from the list of feature test
          macros.  It was removed since ACE no longer supports any systems
          that required it.

Wed Jul  9 16:02:32 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:

          Changed ACE_HAS_SIGVAL_SIGVAL_INT and ACE_HAS_SIGVAL_SIGVAL_PTR
          feature tests to use "union sigval" instead of "sigval_t".  The
          former is what ACE uses; while the latter is a common extension,
          it is not in the XPG3 specification.  Thanks to Olli Savia.

Wed Jul  9 14:23:00 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * ace/README:

          Remove ACE_HAS_TEMPLATE_SPECIALIZATION from list of feature
          test macros.

Wed Jul  9 14:18:26 UTC 2008  J.T. Conklin  <jtc@acorntoolworks.com>

        * m4/config_h.m4:
        * configure.ac:

          Remove feature test and autoheader template for
          ACE_HAS_DLFCN_H_BROKEN_EXTERN_C.

        * ace/os_include/os_dlfcn.h:

          Remove use of ACE_HAS_DLFCN_H_BROKEN_EXTERN_C feature test
          macro.

        * ace/README:

          Remove ACE_HAS_DLFCN_H_BROKEN_EXTERN_C from the list of feature
          test macros.  It was removed since ACE no longer supports any
          systems that required it.

Wed Jul  9 09:20:03 UTC 2008  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.h:
        * ace/TTY_IO.cpp:
          Removed deprecated 'parityenb' member from ACE_TTY_IO::Serial_Params
          structure.

        * NEWS:
          Added a note about change above.

Tue Jul  8 21:53:31 UTC 2008  Douglas C. Schmidt  <schmidt@dre.vanderbilt.edu>
